fix forum unpin button spacing

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -31,7 +31,7 @@
 }
 
 #un_pin_button{
-    width:30px;
+    width:45px;
     height:30px;
     border: 0;
     background: transparent;
